fixed spacing

--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@ h3{
 .container{
     padding-top: 20px;
     width: 100%;
-    height: 800px;
+    height: auto;
 
 }
 
@@ -60,7 +60,6 @@ li a {
     display: block !important;
     color: white !important;
     text-align: center;
-    padding: 14px 50px !important;
     text-decoration: none !important;
     font-size: 20px;
 }
